--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,10 @@
     "module": "commonjs",
     "target": "es5",
     "declaration": true,
+    "outDir": "dist",
     "newLine": "LF"
   },
   "include": [
-    "index.ts"
+    "src/*"
   ]
 }
